# HouseHunter

./: .gitignore  README.md
.idx/: dev.nix
api/: app.py  config.py  database.db  pyproject.toml  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 08e30345951a_add_maintenancerequest_model_and_.py  3719c2b07592_fixed_model_imports.py  4f334650b26f_add_lease_and_leaseagreementtemplate_.py  5384140aa0ba_add_maintenancerequest_model_and_.py  6a36201818ac_initial_migration.py  71d6e0e033f3_update_property_status_add_verification_.py  8f9e7cf2be2c_change_data_type_from_numeric_to_uuid_.py  a241001bf6b1_add_rentpayment_model_and_relationship_.py  d1309f8c5d6c_add_verificationdocument_model_and_.py
api/models/: __init__.py  base.py  chat.py  favorite.py  lease.py  maintenance_request.py  property.py  rent_payment.py  review.py  user.py  verification_document.py
api/routes/: admin_routes.py  auth_routes.py  chat_routes.py  favorite_routes.py  lease_routes.py  maintenance_routes.py  payment_routes.py  property_routes.py  review_routes.py  user_routes.py
api/services/: chat_service.py  database.py  exceptions.py  favorite_service.py  lease_service.py  maintenance_service.py  payment_service.py  property_service.py  review_service.py  storage.py  user_service.py
api/utils/: auth_helpers.py  decorators.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
markdown/: 401_REDIRECT_FIX_PLAN.md  401_REDIRECT_PLAN.md  CHAT_ENHANCEMENTS_PLAN.md  CREATE_LISTING_IMPROVEMENT_PLAN.md  NEXT_STEPS_PLAN.md  PHASE_4_PLAN.md  PLAN.md  SETUP.md  (+3 more)
(+36 files in other folders)
