[tool.poetry]
name = "househunterapi"
version = "1"
description = "Backend for HouseHunter project"
authors = ["Daniel Obiorah <Beetroit3266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.20.0"
quart-schema = "^0.21.0"
quart-auth = "^0.11.0"
quart-cors = "^0.8.0"
pydantic = "^2.11.1"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
