[tool.poetry]
name = "househunterapi"
version = "1"
description = "Backend for HouseHunter project"
authors = ["Daniel Obiorah <Beetroit3266@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.20.0"
quart-schema = "^0.21.0"
quart-auth = "^0.11.0"
quart-cors = "^0.8.0"
pydantic = {extras = ["email"], version = "^2.11.1"}
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
rich = "^14.0.0"
passlib = "^1.7.4"
redis = {extras = ["hiredis"], version = "^5.2.1"}
azure-storage-blob = "^12.25.1"
azure-identity = "^1.21.0"
aiohttp = "^3.11.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
